# AI-Powered-URL-Shortener-Dashboard

./: README.md
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  build-extension.js  build-extension.sh  config.py  main.py  pyproject.toml  setup.sh
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/app/: __init__.py
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/app/models/: __init__.py  bio.py  click.py  url.py  user.py
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/app/routes/: api.py  auth.py  web.py
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/app/services/: ai_service.py  analytics_service.py  email_service.py  slug_generator.py  storage_service.py  url_cleaner.py  url_validator.py  web_scraper.py
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/app/static/: robots.txt
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/app/templates/: analytics.html  base.html  bio_editor.html  bio_page.html  create.html  dashboard.html  expired.html  forgot_password.html  forgot_password_confirmation.html  index.html  login.html  privacy.html  reset_password.html  signup.html
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/chrome-extension/: background.js  config.js  manifest.json  popup.css  popup.html  popup.js
AI-Powered URL Shortener Dashboard/AI-Powered URL Shortener Dashboard/tests/: conftest.py  test_url_model.py
(+5 files in other folders)
